更新一些运行环境的错误

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -7,6 +7,7 @@ emailServerPort=25
 from=pymchina@126.com
 username=pymchina
 password=loepmpknkrqkdazp
+
 #\u53d1\u9001\u7684\u6587\u672c\u683c\u5f0f\u4fe1\u606f
 text=<html>\
 <head>\
@@ -19,15 +20,15 @@ margin-top:-10px;\
 </style>\
 </head>\
 <body>\
-<h4><b>\u4eb2\u7231\u7684\u62cd\u57df\u540d\u7528\u6237\uff1a</b> </h4>\
+<h4><b>\u4eb2\u7231\u7684\u7c73\u4e50\u62cd\u5356\u7528\u6237\uff1a</b> </h4>\
 <div><p>\u60a8\u597d!</p><div>\
-<p>\u60a8\u4e8eDate1\u7533\u8bf7\u4fee\u6539\u4e86\u90ae\u7bb1\uff0c\u4fee\u6539\u540e\u90ae\u7bb1\u5730\u5740\uff1aemail\uff0c\u70b9\u51fb\u4ee5\u4e0b\u94fe\u63a5,\u5373\u53ef\u6fc0\u6d3b\u8be5\u90ae\u7bb1\u5728\u62cd\u57df\u540d\u5e73\u53f0\u7684\u4f7f\u7528\uff1a</p>\
+<p>\u60a8\u4e8eDate1\u7533\u8bf7\u4fee\u6539\u4e86\u90ae\u7bb1\uff0c\u4fee\u6539\u540e\u90ae\u7bb1\u5730\u5740\uff1aemail\uff0c\u70b9\u51fb\u4ee5\u4e0b\u94fe\u63a5,\u5373\u53ef\u6fc0\u6d3b\u8be5\u90ae\u7bb1\u5728\u7c73\u4e50\u62cd\u5356\u5e73\u53f0\u7684\u4f7f\u7528\uff1a</p>\
 <a href = "http"><p>http</p></a>\
 <p>1\u3001\u4e3a\u4e86\u4fdd\u969c\u60a8\u5e10\u53f7\u7684\u5b89\u5168\u6027\uff0c\u8bf7\u5728 48\u5c0f\u65f6\u5185\u5b8c\u6210\u6fc0\u6d3b\u3002</p>\
 <p>2\u3001\u8bf7\u5c3d\u5feb\u5b8c\u6210\u6fc0\u6d3b\uff0c\u5426\u5219\u8fc7\u671f\uff0c\u5373Date2\u540e\u4fee\u6539\u5931\u6548\u3002</p>\
 </body>\
 </html>
 #\u90ae\u4ef6\u4e3b\u9898
-subject=\u3010\u62cd\u57df\u540d\u3011\u90ae\u7bb1\u9a8c\u8bc1
+subject=\u3010\u7c73\u4e50\u62cd\u5356\u3011\u90ae\u7bb1\u9a8c\u8bc1
 mailSmtpAuth=true
 mailSmtpTimeout=25000
