--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -42,15 +42,15 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=\u767b\u7fbd\u62cd\u5356\u5e73\u53f0\u540e\u53f0
-copyrightYear=2015
+productName=\u56fd\u5546\u5546\u6807\u7ba1\u7406\u540e\u53f0
+copyrightYear=2017
 version=V1.0.0
 
 #\u6f14\u793a\u6a21\u5f0f: \u4e0d\u80fd\u64cd\u4f5c\u548c\u4fdd\u5b58\u7684\u6a21\u5757\uff1a sys: area/office/user/role/menu/dict, cms: site/category
 demoMode=false
 
 #\u7ba1\u7406\u57fa\u7840\u8def\u5f84, \u9700\u540c\u6b65\u4fee\u6539\uff1aweb.xml
-adminPath=/dy_manage_4513
+adminPath=/manage
 
 #\u524d\u7aef\u57fa\u7840\u8def\u5f84
 frontPath=
@@ -124,10 +124,12 @@ userfiles.basedir=D:/jeesite
 
 #\u521d\u59cb\u5316\u5bc6\u7801
 initlize.password=1111
-
+ 
 #\u7f51\u7edc\u4ee3\u7406
-proxy.enable=true
+proxy.enable=false
 proxy.ip=10.167.196.133
 proxy.port=8080
 
 local.debug=true
+
+cdn.domain=
