更新查询发邮件

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,7 +15,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/dengyu?useUnicode=true&characterEncoding=utf-8
 #jdbc.url=jdbc:mysql://rdszmcqgeu2ur717l13e.mysql.rds.aliyuncs.com:3306/dengyu?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
  
 #mssql database settings
 #jdbc.type=mssql
