--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 .idea
 *.iml
 .settings/*
-/indexes/*
 /target/*
 /src/main/webapp/WEB-INF/classes/*
 /src/main/webapp/userfiles/*
 /target/
 /target/
+/.gitignore
