--- a/pom.xml
+++ b/pom.xml
@@ -840,13 +840,13 @@
                             <!-- this is relative to the pom.xml directory -->
                             <directory>src/main/resources</directory>
                             <targetPath>/WEB-INF/classes</targetPath>
-                            <filtering>true</filtering>
+                            <filtering>false</filtering>
                         </resource>
                         <resource>
                             <!-- this is relative to the pom.xml directory -->
                             <directory>src/main/webapp</directory>
                             <targetPath>/</targetPath>
-                            <filtering>true</filtering>
+                            <filtering>false</filtering>
                         </resource>
                     </webResources>
                     <warName>${package.warname}</warName>
