--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -12,10 +12,11 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/dengyu?useUnicode=true&characterEncoding=utf-8
-jdbc.url=jdbc:mysql://118.89.42.12:3306/dengyu?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/dengyu?useUnicode=true&characterEncoding=utf-8
+#jdbc.url=jdbc:mysql://118.89.42.12:3306/dengyu?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=xWFdQR08vSsH
+jdbc.password=root
+#jdbc.password=xWFdQR08vSsH
 
 #mssql database settings
 #jdbc.type=mssql
