--- a/pom.xml
+++ b/pom.xml
@@ -680,6 +680,37 @@
             <artifactId>nutz</artifactId>
             <version>1.b.52</version>
         </dependency>
+        
+        <!-- 微信支付二维码依赖包 -->
+        <dependency>
+		    <groupId>org.jdom</groupId>
+		    <artifactId>jdom</artifactId>
+		    <version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+                        <dependency>
+	          <groupId>org.apache.httpcomponents</groupId>
+		      <artifactId>httpclient</artifactId>
+		      <version>4.5.2</version>
+	    </dependency>
+	    
+	    <dependency>
+	           <groupId>org.apache.httpcomponents</groupId>
+	           <artifactId>httpclient-cache</artifactId>
+	           <version>4.5</version>
+	    </dependency>
+	       
+	    <dependency>
+	           <groupId>org.apache.httpcomponents</groupId>
+	           <artifactId>httpmime</artifactId>
+	           <version>4.3.2</version>
+	    </dependency>
+        
+        
     </dependencies>
 
     <build>
